<resources>
    <string name="app_name">Batatas</string>
    <string name="batatas_url">www.batatas.cz</string>

    <string name="choose_language_label">Please choose your language</string>

    <string name="company_logo_desc">Company Logo</string>
    <string name="product_image_desc">Product Image</string>

    <string name="czech_language_desc">Czech</string>
    <string name="english_language_desc">English</string>

    <string name="languages">Languages</string>

    <string name="restart_app">Restart App</string>

    <string name="reload">Reload</string>
    <string name="loading">Loading</string>

    <string name="cart">Cart</string>
    <string name="shop">Shop</string>
    <string name="connection_error">Unable to connnect</string>
    <string name="none">none</string>
    <string name="language">en</string>
    <string name="reconnect">Reconnect</string>
    <string name="check_connection">Please check your internet\nconection, then reload</string>
    <string name="change_language_message">Change phone locale to fully switch app language</string>
    <string name="food">Food name</string>
    <string name="quantity">Qt.</string>
    <string name="price">Price</string>
    <string name="total">Total:</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
</resources>
