<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/reload"
        android:icon="@drawable/reload"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/reload" />

    <group android:id="@+id/menu_items">
        <item
            android:id="@+id/change_language"
            android:icon="@drawable/czech_flag"
            android:orderInCategory="100"
            android:showAsAction="ifRoom"
            android:title="@string/languages">
            <menu>
                <item
                    android:id="@+id/english_language"
                    android:icon="@drawable/english_flag"
                    android:orderInCategory="100"
                    android:title="@string/english_language_desc" />
            </menu>
        </item>

        <item
            android:id="@+id/restart_app"
            android:orderInCategory="100"
            android:showAsAction="never"
            android:title="@string/restart_app" />
    </group>

</menu>
