<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/complementplus"
        android:contentDescription="@string/plus" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:id="@+id/complementminus"
        android:contentDescription="@string/minus" />

    <TextView
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:minHeight="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:text="@string/food" />

    <TextView
        android:layout_width="57dp"
        android:layout_height="wrap_content"
        android:id="@+id/count"
        android:minHeight="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/quantity"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/total"
        android:minHeight="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:text="@string/price" />
</LinearLayout>